@@ -1,3 +1,8 @@
+2013-09-24  Michael Schwendt  <mschwendt@users.sf.net>
+
+	* configure.ac, src/main.c, src/plugin.c: port to
+	  Audacious 3.5-devel plugin API (45)
+
 2013-02-16  Michael Schwendt  <mschwendt@users.sf.net>
 
 	* src/plugin.c: use .about_text instead of GTK+
